fixed autoplay on mobile

--- a/src/styles/components/navbar.module.css
+++ b/src/styles/components/navbar.module.css
@@ -370,6 +370,10 @@ ul li span {
     padding: 0.6rem 2rem;
   }
 
+  .hideOnMobile {
+    display: none !important;
+  }
+
   .activeNavbar {
     border: none;
   }
