--- a/src/styles/views/home.module.css
+++ b/src/styles/views/home.module.css
@@ -70,7 +70,7 @@ html {
   font-size: 2.2rem;
   font-weight: 700;
   font-style: italic;
-  padding: 1.5rem 2.5rem;
+  padding: 1rem 2rem;
   z-index: 10;
   transform: translateY(50%);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
@@ -412,7 +412,7 @@ html {
 
   .mottoBox {
     font-size: 2rem;
-    padding: 1.5rem 2rem;
+    padding: 0.8rem 1.5rem;
   }
 
   .montageText {
